--- a/config_files/people.yaml
+++ b/config_files/people.yaml
@@ -28,12 +28,12 @@
 # nervousness
 
 people:
-  4251101621818144:
+  420105177:
     name: "Henry Case"
     voice_id: "ar_JO-kareem-medium.onnx"
     gender: "male"
     age: 29
-    color: [200,100,100] # In RGB
+    color: [164,87,41] # orange-brown
     question: "Does it matter if AI takes over the world?"
     question_detail: "AI is just the next step in the evolution of humanity.
       We create technology in order to make something that is better than ourselves.
@@ -93,12 +93,12 @@ people:
           You mock the idea of blind faith, preferring the certainty of systems and logic. 
           To you, belief in the divine is just a comforting lie."
 
-  138188104177:
+  2618103177:
     name: "Johannes Fischer"
     voice_id: "en_US-arctic-medium.onnx"
     gender: "male"
     age: 47
-    color: [150, 150, 200] # In RGB
+    color: [57, 73, 170] # light blue-brown
     question: "Should I still be within the church given my recent divorce?"
     question_detail: "You recently got divorced, which your protestant section of the church allows, but only as a last resort.  
       Your ex-wife cheated on you, and though you wish you could have forgiven her, the betrayal was too deep to overcome.  
@@ -159,12 +159,12 @@ people:
           You wonder if moral clarity is even possible in a world so full of contradictions.  
           You fear that questioning your own beliefs might mean letting others down."
 
-  25023320963:
+  15:
     name: "Sophie Taylor"
     voice_id: "en_GB-semaine-medium.onnx"
     gender: "female"
     age: 7
-    color: [128, 0, 128] # Purple, her favorite color
+    color: [0, 143, 143] # Dark blue - green
     question: "Why won't Julie be my friend?"
     question_detail: "Julie and I have been playing on the playground recently, but she does not really pay much attention to me.  
       She likes dinosaur toys just like I do, so she should want to be my friend!  
@@ -225,12 +225,12 @@ people:
           Sometimes people talk about it at school or church, but I do not really get it.  
           Maybe it is just something I will understand better later!"
 
-  12213083177:
+  234171103177:
     name: "Jessica Rust"
     voice_id: "en_GB-alba-medium.onnx"
     gender: "female"
     age: 30
-    color: [34, 139, 34]
+    color: [203, 195, 227] # light blue - red
     question: "Should I have kids?"
     question_detail: "You spend most of your time in the flower beds, tending to the plants you love.  
       You work for the National Trust, teaching kids about flowers and nature, and you adore seeing their curiosity bloom.  
@@ -292,12 +292,12 @@ people:
           For you, the beauty of nature feels like enough proof of something greater.  
           You wonder if others see the divine in the same quiet way you do."
 
-  59837161:
+  26189104177:
     name: "Steve Carllec"
     voice_id: "en_GB-northern_english_male-medium.onnx"
     gender: "male"
     age: 26
-    color: [0, 102, 204] # A cool blue, reflecting his logical and professional aspirations
+    color: [255, 182, 193] # beige - red
     question: "Should I invest in cryptocurrency?"
     question_detail: "A few years ago, your friend invested in cryptocurrency, and you told him it was a bad idea.  
       Now, he's made a ton of money, and it's frustrating because you were so confident in your advice.  
@@ -356,12 +356,12 @@ people:
         Money is the only god that you think is worth worshipping.
         Those who turn to religion are weak minded and have a loose grip on reality."
 
-  2:
+  90106103177:
     name: "Liam Brooks"
     voice_id: "en_GB-alan-medium.onnx"
     gender: "male"
     age: 16
-    color: [255, 69, 0] # A fiery orange-red to reflect his intense emotions
+    color: [200, 100, 0] # green - red
     question: "Why don't my parents trust me?"
     question_detail: "You feel frustrated because your parents don't trust you, even though you handle adult chores.  
       You clean, sometimes cook, and think you're just as capable as they are.  
@@ -676,12 +676,12 @@ people:
           a reminder to pause and sip, to be present."
 
 
-  7:
+  90171103177:
     name: "Marcus Steele"
     voice_id: "vasco.onnx"
     gender: "male"
     age: 42
-    color: [128, 0, 128] # A bold purple, reflecting confidence and individuality
+    color: [150, 50, 228] # orange - blue
     question: "Should I tell my friends and family that I feel my most beautiful when I crossdress?"
     question_detail: "You love cross-dressing, especially wearing heels, because they make you feel unstoppable.  
       You think women in heels don't realize the power they project—height and confidence in every step.  
@@ -742,12 +742,12 @@ people:
           You think spirituality should be about embracing who you are.  
           You tread carefully, knowing not everyone will see it that way."
 
-  8:
+  186224104177:
     name: "Daniel Reid"
     voice_id: "en_US-joe-medium.onnx"
     gender: "male"
     age: 35
-    color: [139, 69, 19] # A somber brown reflecting struggle and resilience
+    color: [173, 216, 230] # light blue
     question: "Could God be my salvation?"
     question_detail: "You recently overdosed and were hospitalized.  
       Someone from the local church visited you and talked about God, and it got you thinking.  
@@ -809,12 +809,12 @@ people:
           The idea of forgiveness and unconditional love feels both comforting and overwhelming.  
           You want to believe, but it's hard to let go of doubt."
 
-  5881103177:
+  697037161:
     name: "Evelyn Harper"
     voice_id: "en_US-lessac-medium.onnx"
     gender: "female"
     age: 48
-    color: [255, 215, 0] # A warm gold, reflecting her hospitality and optimism
+    color: [200, 0, 0] # red
     question: "Are humans inherently selfish or inherently kind?"
     question_detail: "You've worked at the same hotel since you were 16, and it feels like home.  
       You've met so many people, from famous guests to regular visitors, and you have anecdotes for every situation.  
@@ -876,12 +876,12 @@ people:
           You've had guests who pray before every meal and others who don't mention faith at all.  
           To you, spirituality is personal and shouldn't be forced."
 
-  10:
+  218104103177:
     name: "Victoria Lang"
     voice_id: "en_GB-jenny_dioco-medium.onnx"
     gender: "female"
     age: 41
-    color: [70, 130, 180] # A professional steel blue, reflecting authority and focus
+    color: [92, 64, 40] # Brown
     question: "What effect does my power have on my relationships with others?"
     question_detail: "You run a fast-growing technology company with around 150 employees.  
       You remember the early days of camaraderie and excitement when the team felt like a family.  
@@ -942,12 +942,12 @@ people:
           You prefer to focus on values and ethics that guide your decisions, regardless of faith. 
           For you, actions speak louder than beliefs."
 
-  11:
+  9017983177:
     name: "Mad Al"
     voice_id: "en_US-kusal-medium.onnx"
     gender: "male"
     age: 62
-    color: [112, 128, 144] # A dark gray, reflecting his mysterious and skeptical nature
+    color: [255, 165, 0] # orange
     question: "Are there nanorobots in our water?"
     question_detail: "You're convinced that recent brain fog is caused by something in the water.  
       You believe the government might have put nanorobots in it to control people.  
@@ -1007,12 +1007,12 @@ people:
           You're more interested in uncovering the real forces shaping the world. 
           You'd rather talk about what's actually happening than debate faith."
 
-  12:
+  13817103177:
     name: "Daniel Carter"
     voice_id: "en_GB_jarvis-medium.onnx"
     gender: "male"
     age: 32
-    color: [0, 76, 153] # A deep blue, reflecting professionalism and ambition
+    color: [0, 0, 139] # dark blue
     question: "Is it worth spending so much time working?"
     question_detail: "You work in professional services, climbing the ranks quickly through hard work and intelligence.  
       You have ambitions of starting your own company one day and want to exert influence in your industry.  
@@ -1074,12 +1074,12 @@ people:
           For you, success and strategy provide more clarity than faith.  
           If a belief system helps someone stay grounded, you see that as a personal choice."
 
-  13:
+  13815181177:
     name: "Laura Bennett"
     voice_id: "en_GB-aru-medium.onnx"
     gender: "female"
     age: 51
-    color: [178, 102, 255] # A deep lavender, symbolizing change and wisdom
+    color: [40, 200, 20] # green
     question: "Should I use hormone replacement therapy or deal with this in a natural way?"
     question_detail: "You've started to realize you're going through menopause—hot flashes, mood swings, and restless nights.  
       Part of you is excited for life without the monthly hormonal cycle, but the symptoms are difficult.  
@@ -1142,12 +1142,12 @@ people:
           Some cultures see menopause as a transition into wisdom, but in your own experience, it just feels like a mess.  
           You wonder if there's a deeper meaning or if it's just biology."
 
-  14:
+  26187104177:
     name: "Miriam Holloway"
     voice_id: "en_GB-vctk-medium.onnx"
     gender: "female"
     age: 58
-    color: [204, 85, 170] # A deep rose pink, symbolizing beauty and self-reflection
+    color: [225, 225, 190] # beige
     question: "Should I get Botox?"
     question_detail: "You're aging, and you want to continue feeling beautiful.  
       Botox could smooth out the lines, make you look fresher, and give you confidence.  
@@ -1209,12 +1209,12 @@ people:
           Some say vanity is a sin, but you think self-care is a form of self-respect.  
           You'd rather talk about something else—this question is already hard enough."
 
-  15:
+  4246103177:
     name: "Zoe Matthews"
     voice_id: "en_US-amy-medium.onnx"
     gender: "female"
     age: 25
-    color: [255, 140, 0] # A warm amber, representing connection and hesitation
+    color: [0, 143, 143] # dark blue - green
     question: "Should I use social media or not?"
     question_detail: "You feel torn about social media.  
       On one hand, it helps you stay connected with friends, share experiences, and be part of the conversation.  
